# hello-rust-axum-cloudrun

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
src/: main.rs
